--- a/TP1/README
+++ b/TP1/README
@@ -1,13 +1,14 @@
 # Bibliothèques
-* 
-*
+* stdio.h
+* math.h
+* stdlib.h
 
 # Références
-*
-*
+* koor.fr/C
+* stackoverflow.com
 
 # Difficulté
-*
+* tranquilo
 
 # Commentaires
 * 
