--- a/TP5/README
+++ b/TP5/README
@@ -1,13 +1,17 @@
 # Bibliothèques
-* 
-*
+* stdio.h
+* math.h
+* stdlib.h
+* string.h
+* time.h
 
 # Références
-*
-*
+* koor.fr/C
+* stackoverflow.com
+* programiz.com
 
 # Difficulté
-*
+* 
 
 # Commentaires
 * 
